--- a/t/twitter.html
+++ b/t/twitter.html
@@ -4,5 +4,6 @@
     <head>
         <title>Redirecting | Destrix</title>
         <meta http-equiv="refresh" content="0; URL=//twitter.com/DestrixApp"/>
+        <style>body {background-color: #000000;}</style>
     </head>
 </html>
